Edited wiki page through web user interface.

--- a/wiki/RobotiTalk.wiki
+++ b/wiki/RobotiTalk.wiki
@@ -1,11 +1,15 @@
 #summary Introduction
 
+= What is RobotiTalk? =
+
+RobotiTalk is a simple application to talk to serial based micro-controllers (the heart of man DIY robots). It's not unlike the serial monitor built into Arduino's Sketch Editor, or Parallax's Basic Stamp Editor. However, unlike those, RobotiTalk provides a platform for building GUI interfaces that can be used to communicate with, control, and process information from the micro-controllers in a much more sophisticated way.
+
+http://robotitalk.googlecode.com/svn/trunk/SourceCode/Files/Architecture/Diagram%20-%20Overview.png
+
+Out of the box, it comes with a raw serial communication GUI that allows you to send commands to your micro-controller, and receive data back. You can configure multiple "robots" (or micro-controllers) and switch back and forth between them and monitor and send instructions to them. 
+
+= Future =
 Checkout the [Roadmap] for more information on where RobotiTalk is headed.
 
-Here are some screens:
-
-http://robotitalk.googlecode.com/svn/trunk/SourceCode/Files/ScreenShots/RobotiTalk_ScreenShot_RobotEdit01_Small.png
-
-http://robotitalk.googlecode.com/svn/trunk/SourceCode/Files/ScreenShots/RobotiTalk_ScreenShot_RobotEdit02_Small.png
-
-http://robotitalk.googlecode.com/svn/trunk/SourceCode/Files/ScreenShots/RobotiTalk_ScreenShot_SerialComm01_Small.png
+= Screens =
+Check out the [ScreenShots] page for screens of RobotiTalk in action.
