Edited wiki page through web user interface.

--- a/wiki/ScreenShots.wiki
+++ b/wiki/ScreenShots.wiki
@@ -9,10 +9,10 @@ These are some screen shots of the beta version
 = Details =
 
 Serial Communication:
-http://robotitalk.googlecode.com/svn/trunk/SourceCode/Files/ScreenShots/RobotiTalk_ScreenShot_SerialComm01.png
+[http://robotitalk.googlecode.com/svn/trunk/SourceCode/Files/ScreenShots/RobotiTalk_ScreenShot_SerialComm01_Small.png http://robotitalk.googlecode.com/svn/trunk/SourceCode/Files/ScreenShots/RobotiTalk_ScreenShot_SerialComm01.png]
 
-Robot Editing:
-http://robotitalk.googlecode.com/svn/trunk/SourceCode/Files/ScreenShots/RobotiTalk_ScreenShot_RobotEdit01.png
+Editing a Robot:
+[http://robotitalk.googlecode.com/svn/trunk/SourceCode/Files/ScreenShots/RobotiTalk_ScreenShot_RobotEdit01_Small.png http://robotitalk.googlecode.com/svn/trunk/SourceCode/Files/ScreenShots/RobotiTalk_ScreenShot_RobotEdit01.png]
 
-Robot Editing Again:
-http://robotitalk.googlecode.com/svn/trunk/SourceCode/Files/ScreenShots/RobotiTalk_ScreenShot_RobotEdit02.png
+Selecting a Custom Class:
+[http://robotitalk.googlecode.com/svn/trunk/SourceCode/Files/ScreenShots/RobotiTalk_ScreenShot_RobotEdit02_Small.png http://robotitalk.googlecode.com/svn/trunk/SourceCode/Files/ScreenShots/RobotiTalk_ScreenShot_RobotEdit02.png]
